# tv-tracking-proj

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_opencv.sh
log/: log.txt
src/: Server side implementation of UDP client-server model.cpp  matching_template.cpp  obj_tracking.cpp  obj_tracking_camshift_Serial.cpp  obj_tracking_host_remote.cpp  obj_tracking_multi.cpp  obj_tracking_raspi_v1.cpp  obj_tracking_raspi_v2.cpp  obj_tracking_retrack_v1.cpp  obj_tracking_retrack_v2.cpp  obj_tracking_retrack_v3.cpp  obj_tracking_retrack_v4_camshift.cpp  obj_tracking_serial.cpp
stabalized_platform_mod_3/: stabalized_platform_mod_3.ino
